# phrank-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
phrank-py/: Cargo.toml  README.md  pyproject.toml
phrank-py/src/: bindings.rs
phrank-rs/: Cargo.toml  README.md
phrank-rs/src/: cohort_entity.rs  error.rs  lib.rs  phrank.rs  traits.rs  types.rs
phrank-rs/src/ontology/: mod.rs  ontolius_adapter.rs
src/: lib.rs  phrank.rs  traits.rs
src/ontology/: ontolius_adapter.rs
