[package]
authors = ["Rouven Reuter <Rouven.Reuter@proton.me>"]
description = "An ontology base similarity algorithm for patient wise similarity. Has been originally published by Karthik A. Jagadeesh 2018"
edition = "2024"
homepage = "https://robinsongroup.github.io/"
repository = "https://github.com/SmartMonkey-git/phrank-rs"
keywords = ["ontology", "hpo", "similarity"]
license = "MIT"
name = "phrank"
version = "0.2.8"

[dependencies]
bimap = "0.6.3"
itertools = "0.14.0"
rayon = "1.10.0"
sprs = "0.11.4"
moka = { version = "0.12.15", features = ["sync"] }
thiserror = "2.0.18"
ontolius = "0.7.2"

[dev-dependencies]
approx = "0.5"
